--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -37,7 +37,7 @@
 					<!-- Logo -->
 					<div class="logo">
 						<h1>
-							<a href="/admin/Index">Admin WAD Wolfram</a>
+							<a href="/admin/">Admin WAD Wolfram</a>
 						</h1>
 					</div>
 				</div>
@@ -48,7 +48,7 @@
 								data-toggle="dropdown">Mi cuenta <b class="caret"></b></a>
 								<ul class="dropdown-menu animated fadeInUp">
 									<li><a href="/admin/Profile">Perfil</a></li>
-									<li><a href="/login">Cerrar sesión</a></li>
+									<li><a href="/user/close">Cerrar sesión</a></li>
 								</ul></li>
 						</ul>
 					</div>
@@ -63,7 +63,7 @@
 				<div class="sidebar content-box " style="display: block;">
 					<ul class="nav ">
 						<!-- Main menu -->
-						<li><a href="/admin/Index"><i
+						<li><a href="/admin/"><i
 								class="glyphicon glyphicon-home "></i> Inicio</a></li>
 						<li class="current"><a href="/admin/AddProject"><i
 								class="glyphicon glyphicon-pencil "></i>Añadir Proyecto</a></li>
@@ -77,7 +77,7 @@
 						</a> <!-- Sub menu -->
 							<ul>
 								<li><a href="/admin/Profile">Perfil</a></li>
-								<li><a href="/login">Cerrar sesión</a></li>
+								<li><a href="/user/close">Cerrar sesión</a></li>
 							</ul></li>
 					</ul>
 				</div>
@@ -95,7 +95,7 @@
 							</div>
 							<div class="panel-body">
 								<form class="form-horizontal" role="form" method='post' 
-									action="/admin/AddProject/create">
+									action="/admin/AddProject/create" enctype="multipart/form-data">
 									<div class="form-group">
 										<label for="inputEmail3" class="col-sm-2 control-label">Nombre
 											del proyecto</label>
@@ -154,7 +154,7 @@
 											proyecto</label>
 										<div class="col-md-10">
 											<input type="file" class="btn btn-default"
-												id="exampleInputFile1" name="image">
+												id="exampleInputFile1" name="imagen">
 											<p class="help-block"></p>
 										</div>
 									</div>
@@ -179,7 +179,7 @@
 									<div class="form-group">
 										<div class="col-sm-offset-2 col-sm-10">
 											<div class="checkbox">
-												<label> <input type="checkbox" name="opened"> Confirmar
+												<label> <input type="checkbox" name="opened" required> Confirmar
 													todos los cambios
 												</label>
 											</div>
@@ -238,54 +238,17 @@
 									<td data-brackets-id='198'><button class="btn btn-primary">
 														<i class="glyphicon glyphicon-pencil"></i> Editar
 													</button>
-													<button class="btn btn-danger">
+													<button class="btn btn-danger" href="/borrarProyecto?id={{id}}">
 														<i class="glyphicon glyphicon-remove"></i> Borrar
 													</button></td>
 
 								</tr>
 								{{/projects}}
-						<!--		<tr data-brackets-id='199' class="even gradeC">
-									<td data-brackets-id='200'>Proyecto 1</td>
-									<td data-brackets-id='201'>Usuario 2</td>
-									<td data-brackets-id='202'>55</td>
-									<td data-brackets-id='203'>2016/12/12</td>
-								</tr>
-								<tr data-brackets-id='204' class="odd gradeA">
-									<td data-brackets-id='205'>Proyecto 2</td>
-									<td data-brackets-id='206'>Usuario 1</td>
-									<td data-brackets-id='207'>78</td>
-									<td data-brackets-id='208'>2016/08/14</td>
-								</tr>
-								<tr data-brackets-id='209' class="even gradeA">
-									<td data-brackets-id='210'>Proyecto 3</td>
-									<td data-brackets-id='211'>Usuario 2</td>
-									<td data-brackets-id='212'>55</td>
-									<td data-brackets-id='213'>2017/01/07</td>
-								</tr>
-								<tr data-brackets-id='214' class="odd gradeA">
-									<td data-brackets-id='215'>Proyecto 4</td>
-									<td data-brackets-id='216'>Usuario 3</td>
-									<td data-brackets-id='217'>116</td>
-									<td data-brackets-id='218'>2016/10/23</td>
-								</tr>
-								<tr data-brackets-id='219' class="even gradeA">
-									<td data-brackets-id='220'>Proyecto 4</td>
-									<td data-brackets-id='221'>Usuario 1</td>
-									<td data-brackets-id='222'>130</td>
-									<td data-brackets-id='223'>2016/10/31</td>
-
-								</tr> -->
+						
 							</tbody>
 						</table>
 					</div>
 				</div>
-						
-						
-						
-						
-						
-						
-						
 					</div>
 
 				</div>
@@ -298,7 +261,7 @@
 		<div class="container ">
 
 			<div class="copy text-center ">
-				WAD Wolfram <a href='/login'>Cerrar sesión</a>
+				WAD Wolfram <a href='/user/close'>Cerrar sesión</a>
 			</div>
 
 		</div>
