--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
@@ -65,7 +65,7 @@
 					<!-- Logo -->
 					<div data-brackets-id='138' class="logo">
 						<h1 data-brackets-id='139'>
-							<a data-brackets-id='140' href="/admin/Index">Admin WAD
+							<a data-brackets-id='140' href="/admin/">Admin WAD
 								Wolfram</a>
 						</h1>
 					</div>
@@ -84,7 +84,7 @@
 									<li data-brackets-id='148'><a data-brackets-id='149'
 										href="/admin/Profile">Perfil</a></li>
 									<li data-brackets-id='150'><a data-brackets-id='151'
-										href="/login">Cerrar sesión</a></li>
+										href="/user/close">Cerrar sesión</a></li>
 								</ul></li>
 						</ul>
 					</div>
@@ -101,7 +101,7 @@
 					<ul data-brackets-id='156' class="nav ">
 						<!-- Main menu -->
 						<li data-brackets-id='157'><a data-brackets-id='158'
-							href="/admin/Index"><i data-brackets-id='159'
+							href="/admin/"><i data-brackets-id='159'
 								class="glyphicon glyphicon-home "></i> Inicio</a></li>
 						<li data-brackets-id='160'><a data-brackets-id='161'
 							href="/admin/AddProject"><i data-brackets-id='162'
@@ -122,7 +122,7 @@
 								<li data-brackets-id='174'><a data-brackets-id='175'
 									href="/admin/Profile">Perfil</a></li>
 								<li data-brackets-id='176'><a data-brackets-id='177'
-									href="/login">Cerrar sesión</a></li>
+									href="/user/close">Cerrar sesión</a></li>
 							</ul></li>
 					</ul>
 				</div>
@@ -141,21 +141,7 @@
 
 
 					<div data-brackets-id='185' class="panel-body">
-						<div class="btn-group">
-							<button type="button" class="btn btn-default dropdown-toggle"
-								data-toggle="dropdown">
-								Cantidad <span class="caret"></span>
-							</button>
-
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="#">MIN-X</a></li>
-								<li><a href="#">X-Y</a></li>
-								<li><a href="#">Y-z</a></li>
-								<li><a href="#">Z-MAX</a></li>
-							</ul>
-						</div>
-						<br> <br>
-
+						
 						<table data-brackets-id='186' cellpadding="0" cellspacing="0"
 							border="0" class="table table-striped table-bordered"
 							id="example">
@@ -168,44 +154,15 @@
 								</tr>
 							</thead>
 							<tbody data-brackets-id='193'>
+                                                            {{#donaciones}}
 								<tr data-brackets-id='194' class="odd gradeX">
-									<td data-brackets-id='195'>Proyecto 1</td>
-									<td data-brackets-id='196'>Usuario 1</td>
-									<td data-brackets-id='197'>30</td>
-									<td data-brackets-id='198'>2016/11/04</td>
+									<td data-brackets-id='195'>{{project.title}}</td>
+									<td data-brackets-id='196'>{{user.userName}}</td>
+									<td data-brackets-id='197'>{{money}}</td>
+									<td data-brackets-id='198'>{{date}}</td>
 
 								</tr>
-								<tr data-brackets-id='199' class="even gradeC">
-									<td data-brackets-id='200'>Proyecto 1</td>
-									<td data-brackets-id='201'>Usuario 2</td>
-									<td data-brackets-id='202'>55</td>
-									<td data-brackets-id='203'>2016/12/12</td>
-								</tr>
-								<tr data-brackets-id='204' class="odd gradeA">
-									<td data-brackets-id='205'>Proyecto 2</td>
-									<td data-brackets-id='206'>Usuario 1</td>
-									<td data-brackets-id='207'>78</td>
-									<td data-brackets-id='208'>2016/08/14</td>
-								</tr>
-								<tr data-brackets-id='209' class="even gradeA">
-									<td data-brackets-id='210'>Proyecto 3</td>
-									<td data-brackets-id='211'>Usuario 2</td>
-									<td data-brackets-id='212'>55</td>
-									<td data-brackets-id='213'>2017/01/07</td>
-								</tr>
-								<tr data-brackets-id='214' class="odd gradeA">
-									<td data-brackets-id='215'>Proyecto 4</td>
-									<td data-brackets-id='216'>Usuario 3</td>
-									<td data-brackets-id='217'>116</td>
-									<td data-brackets-id='218'>2016/10/23</td>
-								</tr>
-								<tr data-brackets-id='219' class="even gradeA">
-									<td data-brackets-id='220'>Proyecto 4</td>
-									<td data-brackets-id='221'>Usuario 1</td>
-									<td data-brackets-id='222'>130</td>
-									<td data-brackets-id='223'>2016/10/31</td>
-
-								</tr>
+                                                                {{/donaciones}}
 							</tbody>
 						</table>
 					</div>
@@ -219,7 +176,7 @@
 		<div data-brackets-id='225' class="container ">
 
 			<div data-brackets-id='226' class="copy text-center ">
-				WAD Wolfram <a data-brackets-id='227' href='/login'>Cerrar
+				WAD Wolfram <a data-brackets-id='227' href='/user/close'>Cerrar
 					sesión</a>
 			</div>
 
