--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
@@ -33,22 +33,11 @@
 					<!-- Logo -->
 					<div class="logo">
 						<h1>
-							<a href="/admin/Index">Admin WAD Wolfram</a>
+							<a href="/admin/">Admin WAD Wolfram</a>
 						</h1>
 					</div>
 				</div>
-				<!--<div class="col-md-5">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="input-group form">
-                                    <input type="text" class="form-control" placeholder="Search...">
-                                    <span class="input-group-btn">
-                                     <button class="btn btn-primary" type="button">Search</button>
-                                   </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
+			
 				<div class="col-md-2 col-sm-2 col-xs-2" style="margin-left: 180px">
 					<div class="navbar navbar-inverse " role="banner ">
 						<ul class="nav navbar-nav ">
@@ -56,7 +45,7 @@
 								data-toggle="dropdown">Mi cuenta <b class="caret"></b></a>
 								<ul class="dropdown-menu animated fadeInUp">
 									<li><a href="/admin/Profile">Perfil</a></li>
-									<li><a href="/login">Cerrar sesión</a></li>
+									<li><a href="/user/close">Cerrar sesión</a></li>
 								</ul></li>
 						</ul>
 					</div>
@@ -71,7 +60,7 @@
 				<div class="sidebar content-box " style="display: block;">
 					<ul class="nav ">
 						<!-- Main menu -->
-						<li class="current"><a href="/admin/Index"><i
+						<li class="current"><a href="/admin/"><i
 								class="glyphicon glyphicon-home "></i> Inicio</a></li>
 						<li><a href="/admin/AddProject"><i
 								class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
@@ -85,7 +74,7 @@
 						</a> <!-- Sub menu -->
 							<ul>
 								<li><a href="/admin/Profile">Perfil</a></li>
-								<li><a href="/login">Cerrar sesión</a></li>
+								<li><a href="/user/close">Cerrar sesión</a></li>
 							</ul></li>
 					</ul>
 				</div>
@@ -95,7 +84,7 @@
 				<!--Page Content-->
 				<div class="row ">
 					<div class="col-md-12 ">
-						<h1>Bienvenido Admin</h1>
+						<h1>Bienvenid@ {{bienvenido}}</h1>
 					</div>
 				</div>
 				<div class="content-box-large ">
@@ -127,7 +116,7 @@
 		<div class="container ">
 
 			<div class="copy text-center ">
-				WAD Wolfram <a href='/login'>Cerrar sesión</a>
+				WAD Wolfram <a href='/user/close'>Cerrar sesión</a>
 			</div>
 
 		</div>
