--- a/WADWolfram/src/main/resources/templates/error2.html
+++ b/WADWolfram/src/main/resources/templates/error2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WADWolfram - Proyecto </title>
+    <title>Error </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Wolfram.org" />
     <!-- css -->
@@ -58,17 +58,14 @@
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li><a href="/">Inicio</a></li>
-                            <li  class="active"><a href="/projects">Proyectos </a></li>
-                            <li><a href="/blog">Noticias </a></li>
-                            <li><a href="/contact">Contacto </a></li>
-                            <li><a href="/about">Sobre sus desarrolladores </a></li>
+                            <li><a>Inicio</a></li>
+                            <li><a>Proyectos </a></li>
+                            <li><a>Noticias </a></li>
+                            <li><a>Contacto </a></li>
+                            <li><a>Sobre nosotros </a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="/register">Únete</a></li>
-                                    <li><a href="/login">Inicia sesión/ Mi cuenta</a></li>
-                                </ul>
+                                <a  class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
+                                
                             </li>
                         </ul>
                     </div>
@@ -77,12 +74,8 @@
                 <section id="inner-headline">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-12">
-                            <ul class="breadcrumb">
-                                <li><a href="/"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-                                <li><a href="/projects">Proyectos</a></li>
-                                <li class="active">Proyecto</li>
-                            </ul>
+                        <div class="col-lg-12" align="right">
+                                  <img src="/giferror.gif"> 
                         </div>
                     </div>
                 </div>
@@ -93,61 +86,14 @@
         <section id="content">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <div class="text-center">
-                            <div class="inside">
-                                {{#Project}}
-                                <h1>{{title}}</h1>
-                                <div class="row" id="proyectPage">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div id="profilePhoto">
-                                                <img src="/imagep/{{id}}.jpg" id="proyectImage" class="img-responsive" />
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div id="information">
-                                                <p class="text-justify">{{description}} </p>
-
-                                            </div>
-                                            <form method="post" action="/pay?projectId={{id}}">
-                                                <button type="submit" class="btn btn-primary btn-lg "> ¡Participa!</button>
-                                            </form>
-                                        </div>
-                                    </div>
-                                    <div class="row ">
-                                        {{#opened}}
-                                        <table class="table table-bordered table-striped ">
-                                            <tbody>
-                                                <tr>
-                                                    <th>Presupuesto total</th>
-                                                    <td>{{totalBudget}} euros</td>
-                                                </tr>
-                                                <tr>
-                                                    <th>Presupuesto concedido</th>
-                                                    <td>{{parcialBudget}} euros</td>
-                                                </tr>
-                                                <tr>
-                                                    <th>Financiación pendiente</th>
-                                                    <td>{{restBudget}} euros</td>
-                                                </tr>
-                                                <tr>
-                                                    <th>Duración</th>
-                                                    <td>{{time}} meses</td>
-                                                </tr>
-                                                <tr>
-                                                    <th>Año de inicio</th>
-                                                    <td>{{startYear}}</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                        {{/opened}}
-                                    </div>
-                                </div>
-                                {{/Project}}
-                            </div>
-                        </div>
+                    <div class="col-md-6">
+                    <img src="/gifmantenimiento.gif">
                     </div>
+                      <div class="col-md-6">
+                      	<h1>Disculpe las molestias: </h1><h3>La contraseña introducida no es correcta.</h3>
+                      	
+                      	<h5>Vuelva a <a href="javascript:history.go(-1)">atrás </a> o vuelve a <a href= "/">Inicio</a></h5>
+                        </div>
                 </div>
             </div>
         </section>
