--- a/WADWolfram/src/main/resources/templates/pay.html
+++ b/WADWolfram/src/main/resources/templates/pay.html
@@ -29,38 +29,58 @@
     <div id="wrapper">
         <!-- start header -->
         <header>
-            <nav>
-                <div class="navbar navbar-default navbar-static-top">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand" href="/"><img src="/img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
-                        </div>
-                        <div class="navbar-collapse collapse ">
-                            <ul class="nav navbar-nav">
-                                <li class="active"><a href="/">Inicio</a></li>
-                                <li><a href="/projects">Proyectos</a></li>
+            <div class="navbar navbar-default navbar-static-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/"><img src="/img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
+                    </div>
+                    <div class="navbar-collapse collapse ">
+                        <ul class="nav navbar-nav">
+                            <li><a>Inicio</a></li>
+                            <li class="active"><a>Proyectos</a></li>
 
-                                <li><a href="/blog">Noticias</a></li>
-                                <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
+                            <li><a>Noticias</a></li>
+                            <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
-                                <li><a href="/contact">Contacto</a></li>
-                                <li><a href="/about">Sobre sus desarrolladores</a></li>
+                            <li><a>Contacto</a></li>
+                            <li><a>Sobre sus desarrolladores</a></li>
 
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="/register">Únete</a></li>
-                                        <li><a href="/login">Inicia sesión/ Mi cuenta</a></li>
-                                    </ul>
-                                </li>
+                            <li class="dropdown">
+                                <a class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
+                                <!--  <ul class="dropdown-menu">
+                                    <li><a href="/register">Únete</a></li>
+                                    <li><a href="/login">Inicia sesión/ Mi cuenta</a></li>
+                                </ul>  -->
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <section id="inner-headline">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <ul class="breadcrumb">
+                                <li><a><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                                <li>Proyectos</li>
+                                <li>Proyecto</li>
+                                <li>Donación</li>
                             </ul>
+
+                            <ul class="breadcrumb" style="float:right;">
+                                <li><a href="/projects">Salir</a></li>
+                            </ul>
+
                         </div>
                     </div>
                 </div>
-            </nav>
+            </section>
+
+
+
         </header>
         <!-- end header -->
 
@@ -68,64 +88,89 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
+                        <img src="/pagar.jpg">
+                        <form method="post" action="/pay/projects?projectId={{projectId}}">
+                            <div id="data">
+                                {{#User}}
+                                <div>
+                                    <label for="exampleInputEmail1">Nombre</label>
+                                    <input readonly class="form-control" id="exampleInputEmail1" placeholder="{{name}}">
+                                </div>
+                                <div>
+                                    <label for="exampleInputEmail1">Apellidos</label>
+                                    <input readonly class="form-control" id="exampleInputEmail1" placeholder="{{surname}}">
+                                </div>
+                                {{/User}}
+                                <div class="form-group">
+                                    <label for="creditCard">Tarjeta de crédito</label>
+                                    <input maxlength="16" type="number" class="form-control" id="creditCard" placeholder="Número de tarjeta" required>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label" for="expiry-month">Fecha Expiración</label>
 
-                        <div id="data">
-                            {{#User}}
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Nombre</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="{{name}}">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Apellidos</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="{{surname}}">
-                            </div>
-                            {{/User}}
-                            <div class="form-group">
-                                <label for="creditCard">Tarjeta de crédito</label>
-                                <input type="text" class="form-control" id="creditCard" placeholder="Número de tarjeta">
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label" for="expiry-month">Fecha Expiración</label>
+                                    <select name="expiry-month" class="form-control " id="expiry-month" required>
+                                        <option>Mes</option>
+                                        <option value="01">Enero (01)</option>
+                                        <option value="02">Febrero (02)</option>
+                                        <option value="03">Marzo (03)</option>
+                                        <option value="04">Abril (04)</option>
+                                        <option value="05">Mayo (05)</option>
+                                        <option value="06">Junio (06)</option>
+                                        <option value="07">Julio (07)</option>
+                                        <option value="08">Agosto (08)</option>
+                                        <option value="09">Septiembre (09)</option>
+                                        <option value="10">Octubre (10)</option>
+                                        <option value="11">Noviembre (11)</option>
+                                        <option value="12">Diciembre (12)</option>
+                                    </select>
+                                    <br>
+                                    <select name="expiry-year" class="form-control" required>
+                                        <option value="17">2017</option>
+                                        <option value="18">2018</option>
+                                        <option value="19">2019</option>
+                                        <option value="20">2020</option>
+                                        <option value="21">2021</option>
+                                        <option value="22">2022</option>
+                                        <option value="23">2023</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="csv">Número de seguridad</label>
+                                    <input maxlength="3" type="text" class="form-control" id="csv" placeholder="CSV" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="quantity">Donación</label>
+                                    <input type="number" class="form-control" id="quantity" placeholder="Nos falta: {{RestBudget}}€" name="money" required>
+                                </div>
 
-                                <select name="expiry-month" class="form-control " id="expiry-month">
-                                    <option>Mes</option>
-                                    <option value="01">Enero (01)</option>
-                                    <option value="02">Febrero (02)</option>
-                                    <option value="03">Marzo (03)</option>
-                                    <option value="04">Abril (04)</option>
-                                    <option value="05">Mayo (05)</option>
-                                    <option value="06">Junio (06)</option>
-                                    <option value="07">Julio (07)</option>
-                                    <option value="08">Agosto (08)</option>
-                                    <option value="09">Septiembre (09)</option>
-                                    <option value="10">Octubre (10)</option>
-                                    <option value="11">Noviembre (11)</option>
-                                    <option value="12">Diciembre (12)</option>
-                                </select>
-                                <br>
-                                <select name="expiry-year" class="form-control">
-                                    <option value="17">2017</option>
-                                    <option value="18">2018</option>
-                                    <option value="19">2019</option>
-                                    <option value="20">2020</option>
-                                    <option value="21">2021</option>
-                                    <option value="22">2022</option>
-                                    <option value="23">2023</option>
-                                </select>
+                                <button type="submit" class="btn btn-primary btn-lg"><a href="#" data-toggle="modal" data-target="#t_and_c_m">Realizar Pago</a></button>
                             </div>
-                            <div class="form-group">
-                                <label for="csv">Número de seguridad</label>
-                                <input type="text" class="form-control" id="csv" placeholder="CSV">
-                            </div>
-                            <div class="form-group">
-                                <label for="quantity">Donación</label>
-                                <input type="password" class="form-control" id="quantity" placeholder="Cantidad">
-                            </div>
-
-                            <button type="button" class="btn btn-primary btn-lg">Realizar Pago</button>
-                        </div>
+                        </form>
                     </div>
                 </div>
+                <!-- Modal -->
+                <!--<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                <h4 class="modal-title" id="myModalLabel">Correcto</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>La operación se ha realizado correctamente. Muchas gracias por contribuir. Puede ver su donación en sus movimientos </p>
+                                
+                                
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary"><a href="/login">Entendido</a></button>
+                            </div>
+                        </div>
+                         /.modal-content 
+                         </form>
+                    </div>
+                    <!-- /.modal-dialog -->
+                <!--</div>-->
+                <!-- /.modal -->
             </div>
         </section>
 
@@ -172,12 +217,7 @@
                     <div class="col-sm-3 col-lg-3">
                         <div class="widget">
                             <h4>Idioma</h4>
-                            <!--   <div class="form-group multiple-form-group input-group">
-                        <input type="email" name="email" class="form-control">
-                        <span class="input-group-btn">
-                            <button type="button" class="btn btn-theme btn-add">Subscribe</button>
-                        </span>
-                    </div>  -->
+
                         </div>
                     </div>
                 </div>
