--- a/WADWolfram/src/main/resources/templates/projects_template.html
+++ b/WADWolfram/src/main/resources/templates/projects_template.html
@@ -65,7 +65,7 @@
                                 <li class="active"><a href="/projects">Proyectos</a></li>
                                 <li><a href="/blog">Noticias</a></li>
                                 <li><a href="/contact">Contacto</a></li>
-                                <li><a href="/about">Sobre los desarrolladores</a></li>
+                                <li><a href="/about">Sobre sus desarrolladores</a></li>
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown-menu">
@@ -128,12 +128,12 @@
 
                                         <div class="cbp-caption">
                                             <div class="cbp-caption-defaultWrap">
-                                                <img src="{{image}}" alt="foto del proyecto" />
+                                                <img src="/imagep/{{id}}.jpg" alt="foto del proyecto" />
                                             </div>
                                             <div class="cbp-caption-activeWrap">
                                                 <div class="cbp-l-caption-alignCenter">
                                                     <div class="cbp-l-caption-body">
-                                                        <a href=(/project?id={{id}}) class="cbp-l-caption-buttonRight" data-title="Proyecto<br>Fecha lanzamiento">Leer más</a>
+                                                        <a href=/project?id={{id}} class="cbp-l-caption-buttonRight" data-title="Proyecto<br>Fecha lanzamiento">Leer más</a>
                                                     </div>
                                                 </div>
                                             </div>
