--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -65,7 +65,7 @@
                             <li class="dropdown active">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/login">Cerrar sesión/ Mi cuenta</a></li>
+                                    <li><a href="/user/close">Cerrar sesión/ Mi cuenta</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -100,13 +100,13 @@
                                         <li id="iteMyDatas"><a href="#" onclick="javascript:changeShow(this)" id="myDatas">Mis datos</a></li>
                                     </ul>
 
-                                    <a href="/login" class="btn btn-info col-lg-2 " role="button" id="btn_sesion">Cerrar Sesión</a>
+                                    <a href="/user/close" class="btn btn-info col-lg-2 " role="button" id="btn_sesion">Cerrar Sesión</a>
 
                                 </div>
                             </nav>
 
                             <div class="inside">
-                                <h1>¡Bienvenido {{username}}!</h1>
+                                <h1>¡Bienvenid@ {{username}}!</h1>
                                 <div class="row show" id="userProjects">
                                     <div class="col-md-6">
                                         <ul class="list-group">
@@ -151,54 +151,57 @@
                                     </div>
                                 </div>
                                 <div class="row hide" id="dataPage">
-                                    <form role="form" class="register-form" action="/users/update" method="post">
+                                    {{#User}}
+                                    <form role="form" class="register-form" action="/users/update/{{id}}" method="post" enctype="multipart/form-data">
+                                         
                                         <div class="col-md-6">
                                             <div id="profilePhoto">
 
-                                                <img src="/img/icono.jpg" id="profileIcon" class="img-responsive" />
+                                                <img src="/imageu/{{id}}.jpg" id="profileIcon" class="img-responsive" />
                                                 <div class="form-group">
                                                     <label for="exampleInputFile">Cambiar foto</label>
-                                                    <input type="file" id="exampleInputFile" class="center-block" name="photo">
-                                                    <p class="help-block">Seleccionar nueva foto.</p>
+                                                    <input type="file" id="exampleInputFile" class="center-block" name="imagen">
+                                                    <p class="help-block">Seleccionar nueva foto</p>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div id="data">
-
-                                                {{#User}}
-                                                <div class="form-group">
+                                                <div >
                                                     <label for="exampleInputEmail1">Nombre</label>
-                                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder={{name}} name="name">
+                                                    <input readonly class="form-control" id="exampleInputEmail1" placeholder="{{name}}" name="name">
+                                                   
                                                 </div>
-                                                <div class="form-group">
+                                                <div >
                                                     <label for="exampleInputEmail1">Apellidos</label>
-                                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder={{surname}} name="surname">
+                                                    <input readonly class="form-control" id="exampleInputEmail1"  name="surname" placeholder="{{surname}}">
+                                                  
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="exampleInputEmail1">Dirección Email</label>
-                                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder={{email}} name="email">
+                                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="{{email}}" name="email">
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="exampleInputEmail1">Nombre Usuario</label>
-                                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder={{userName}} name="username">
+                                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="{{userName}}" name="username">
                                                 </div>
 
                                                 <div class="form-group">
                                                     <label for="exampleInputPassword1">Antigua Contraseña</label>
-                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{oldPassword}} name="oldPassword">
+                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña" name="oldPassword" required>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="exampleInputPassword1">Nueva Contraseña</label>
-                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{newPassword}} name="newPassword">
+                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña nueva" name="newPassword" >
                                                 </div>
 
                                                 <button type="submit" class="btn btn-primary btn-lg">Guardar Cambios</button>
-                                                {{/User}}
-
+                                             
                                             </div>
                                         </div>
+                                         
                                     </form>
+                                    {{/User}}
                                 </div>
                             </div>
                         </div>
