--- a/WADWolfram/src/main/resources/templates/pay.html
+++ b/WADWolfram/src/main/resources/templates/pay.html
@@ -143,7 +143,7 @@
                                     <input type="number" class="form-control" id="quantity" placeholder="Nos falta: {{RestBudget}}€" name="money" required>
                                 </div>
 
-                                <button type="submit" class="btn btn-primary btn-lg"><a href="#" data-toggle="modal" data-target="#t_and_c_m">Realizar Pago</a></button>
+                                <button type="submit" class="btn btn-primary btn-lg">Realizar Pago</button>
                             </div>
                         </form>
                     </div>
