last visual changes

--- a/WADWolfram/src/main/resources/templates/error.html
+++ b/WADWolfram/src/main/resources/templates/error.html
@@ -92,11 +92,12 @@
                       <div class="col-md-6">
                       	<h1>Disculpe las molestias: </h1><h3>Estamos trabajando para que su experiencia sea óptima.</h3>
                       	<h5>Posibles errores:</h5>
-                      	<u>
+                      	<ul>
                       	<li>Compruebe que ha iniciado sesión</li>
                       	<li>Compruebe que la contraseña es correcta</li>
-                      	</u>
-                      	<h5>Vuelva a <a href="javascript:history.go(-1)">atrás </a> o vuelve a <a href= "/">Inicio</a></h5>
+                      	<li>Puede que no tengas los permisos necesarios para esta página</li>
+                      	</ul>
+                      	<h5>Vuelva <a href="javascript:history.go(-1)">atrás </a> o vuelva a <a href= "/">Inicio</a></h5>
                         </div>
                 </div>
             </div>
@@ -134,12 +135,12 @@
                         <div class="widget">
                             <h4>Páginas relacionadas</h4>
                             <ul class="link-list">
-                                <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0">ORPHANET – Síndrome de Wolfram</a></li>
-                                <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html">Asociación Francesa del síndrome de Wolfram</a></li>
-                                <li><a href="http://wolframsyndrome.dom.wustl.edu/">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
-                                <li><a href="http://aswolfram.org/">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
-                                <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
-                                <li><a href="http://www.euro-wabb.org/es/">EURO-WABB</a></li>
+                                <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0" target="_blank">ORPHANET – Síndrome de Wolfram</a></li>
+                                <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html" target="_blank">Asociación Francesa del síndrome de Wolfram</a></li>
+                                <li><a href="http://wolframsyndrome.dom.wustl.edu/" target="_blank">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
+                                <li><a href="http://aswolfram.org/" target="_blank">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
+                                <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras" target="_blank">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
+                                <li><a href="http://www.euro-wabb.org/es/" target="_blank">EURO-WABB</a></li>
                             </ul>
                         </div>
                     </div>
