--- a/WADWolfram/src/main/resources/templates/login.html
+++ b/WADWolfram/src/main/resources/templates/login.html
@@ -106,6 +106,7 @@
                                     <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4" required>
                                 </div>
                                 <div class="form-group">
+                                	<label for="exampleInputPassword1"></label>
                                     <input type="password" name="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña" tabindex="4" required>
                                 </div>
 
@@ -125,7 +126,7 @@
                                 <hr class="colorgraph">
                                 <div class="row">
                                     <div class="col-xs-12 col-md-6">
-                                        <input type="submit" value="Entrar" class="btn btn-primary btn-block btn-lg" tabindex="7">
+                                        <button type="submit" class="btn btn-primary" data-dismiss="modal" onclick="cifrar()">Entrar</button>
                                     </div>
                                     <div class="col-xs-12 col-md-6">¿Todavía no tienes una cuenta? <a href="/register">Únete ya</a></div>
                                 </div>
@@ -194,13 +195,13 @@
                             <div class="widget">
                                 <h4>Páginas relacionadas</h4>
                                 <ul class="link-list">
-                                    <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0">ORPHANET – Síndrome de Wolfram</a></li>
-                                    <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html">Asociación Francesa del síndrome de Wolfram</a></li>
-                                    <li><a href="http://wolframsyndrome.dom.wustl.edu/">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
-                                    <li><a href="http://aswolfram.org/">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
-                                    <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
-                                    <li><a href="http://www.euro-wabb.org/es/">EURO-WABB</a></li>
-                                </ul>
+                                   <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0" target="_blank">ORPHANET – Síndrome de Wolfram</a></li>
+                                <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html" target="_blank">Asociación Francesa del síndrome de Wolfram</a></li>
+                                <li><a href="http://wolframsyndrome.dom.wustl.edu/" target="_blank">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
+                                <li><a href="http://aswolfram.org/" target="_blank">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
+                                <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras" target="_blank">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
+                                <li><a href="http://www.euro-wabb.org/es/" target="_blank">EURO-WABB</a></li>
+                            </ul>
                             </div>
                         </div>
                         <div class="col-sm-3 col-lg-3">
@@ -260,7 +261,14 @@
         <script src="/js/google-code-prettify/prettify.js"></script>
         <script src="/js/animate.js"></script>
         <script src="/js/custom.js"></script>
-
+        <script src="js/sha1.js"></script>
+        <script src="js/sha1.js"></script>
+	<script>
+		function cifrar(){
+			var input_pass = document.getElementById("exampleInputPassword1");
+			input_pass.value = sha1(input_pass.value);
+		}
+	</script>
 
     </body>
 
