--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -191,7 +191,7 @@
 												proyecto</button>
 										</div>
 									</div>
-									<input type="hidden" name="_csrf" value="{{token}}" >
+									<input type="hidden" name="_csrf" value="{{token}}"/>
 								</form>
 							</div>
 						</div>
@@ -241,7 +241,7 @@
 													<button class="btn btn-danger">
 														<i class="glyphicon glyphicon-remove"></i> Borrar
 													</button>
-													<input type="hidden" name="_csrf" value="{{token}}" >
+													<input type="hidden" name="_csrf" value="{{token}}"/>
 												</form>
 											</td>
 
