--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
@@ -192,7 +192,7 @@
 												noticia</button>
 										</div>
 									</div>
-									<input type="hidden" name="_csrf" value="{{token}}" >
+									<input type="hidden" name="_csrf" value="{{token}}"/>
 									
 								</form>
 							</div>
@@ -236,7 +236,7 @@
 											<button class="btn btn-danger">
 												<i class="glyphicon glyphicon-remove"></i> Borrar
 											</button>
-										<input type="hidden" name="_csrf" value="{{token}}" >
+										<input type="hidden" name="_csrf" value="{{token}}"/>
 										</form></td>
 
 								</tr>
