--- a/WADWolfram/src/main/resources/templates/contact.html
+++ b/WADWolfram/src/main/resources/templates/contact.html
@@ -46,7 +46,7 @@
                                     <input class="sb-search-input" placeholder="Enter your search term..." type="text" value="" name="search" id="search">
                                     <input class="sb-search-submit" type="submit" value="">
                                     <span class="sb-icon-search" title="Click to start searching"></span>
-                                    <input type="hidden" name="_csrf" value="{{token}}" >
+                                    <input type="hidden" name="_csrf" value="{{token}}"/>
                                 </form>
                             </div>
 
@@ -122,7 +122,7 @@
                             <div class="text-center">
                                 <button type="submit" class="btn btn-theme btn-block btn-md">Enviar mensaje</button>
                             </div>
-                            <input type="hidden" name="_csrf" value="{{token}}" >
+                            <input type="hidden" name="_csrf" value="{{token}}"/>
                         </form>
                         <hr class="colorgraph">
 
