--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -199,7 +199,7 @@
                                              
                                             </div>
                                         </div>
-                                         <input type="hidden" name="_csrf" value="{{token}}" >
+                                         <input type="hidden" name="_csrf" value="{{token}}"/>
                                     </form>
                                     {{/User}}
                                 </div>
