--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -48,7 +48,13 @@
 								data-toggle="dropdown">Mi cuenta <b class="caret"></b></a>
 								<ul class="dropdown-menu animated fadeInUp">
 									<li><a href="/admin/Profile">Perfil</a></li>
-									<li><a href="/user/close">Cerrar sesión</a></li>
+									<li><a>
+											<form action="/user/close" method="post">
+												<input type="submit" id="boton_nuevo_cs" class="btn"
+													value="Cerrar sesión" /> <input type="hidden" name="_csrf"
+													value="{{token}}" />
+											</form>
+									</a></li>
 								</ul></li>
 						</ul>
 					</div>
@@ -191,7 +197,7 @@
 												proyecto</button>
 										</div>
 									</div>
-									<input type="hidden" name="_csrf" value="{{token}}"/>
+									<input type="hidden" name="_csrf" value="{{token}}" />
 								</form>
 							</div>
 						</div>
@@ -241,7 +247,7 @@
 													<button class="btn btn-danger">
 														<i class="glyphicon glyphicon-remove"></i> Borrar
 													</button>
-													<input type="hidden" name="_csrf" value="{{token}}"/>
+													<input type="hidden" name="_csrf" value="{{token}}" />
 												</form>
 											</td>
 
