--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
@@ -65,8 +65,7 @@
 					<!-- Logo -->
 					<div data-brackets-id='138' class="logo">
 						<h1 data-brackets-id='139'>
-							<a data-brackets-id='140' href="/admin/">Admin WAD
-								Wolfram</a>
+							<a data-brackets-id='140' href="/admin/">Admin WAD Wolfram</a>
 						</h1>
 					</div>
 				</div>
@@ -83,8 +82,13 @@
 									class="dropdown-menu animated fadeInUp">
 									<li data-brackets-id='148'><a data-brackets-id='149'
 										href="/admin/Profile">Perfil</a></li>
-									<li data-brackets-id='150'><a data-brackets-id='151'
-										href="/user/close">Cerrar sesión</a></li>
+									<li><a>
+											<form action="/user/close" method="post">
+												<input type="submit" id="boton_nuevo_cs" class="btn"
+													value="Cerrar sesión" /> <input type="hidden" name="_csrf"
+													value="{{token}}" />
+											</form>
+									</a></li>
 								</ul></li>
 						</ul>
 					</div>
@@ -141,7 +145,7 @@
 
 
 					<div data-brackets-id='185' class="panel-body">
-						
+
 						<table data-brackets-id='186' cellpadding="0" cellspacing="0"
 							border="0" class="table table-striped table-bordered"
 							id="example">
@@ -154,7 +158,7 @@
 								</tr>
 							</thead>
 							<tbody data-brackets-id='193'>
-                                                            {{#donaciones}}
+								{{#donaciones}}
 								<tr data-brackets-id='194' class="odd gradeX">
 									<td data-brackets-id='195'>{{project.title}}</td>
 									<td data-brackets-id='196'>{{user.userName}}</td>
@@ -162,7 +166,7 @@
 									<td data-brackets-id='198'>{{date}}</td>
 
 								</tr>
-                                                                {{/donaciones}}
+								{{/donaciones}}
 							</tbody>
 						</table>
 					</div>
