--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
@@ -46,12 +46,12 @@
 								<ul class="dropdown-menu animated fadeInUp">
 									<li><a href="/admin/Profile" id="boton_nuevo_cs" class="btn">Perfil</a></li>
 									<li><a>
-									<form action="/user/close" method="post">
-                                    	<input type="submit" id="boton_nuevo_cs" class="btn" value="Cerrar sesión" />  
-                                    	<input type="hidden" name="_csrf" value="{{token}}"/>                                  
-                                    	</form>
-                                    	</a>
-									</li>
+											<form action="/user/close" method="post">
+												<input type="submit" id="boton_nuevo_cs" class="btn"
+													value="Cerrar sesión" /> <input type="hidden" name="_csrf"
+													value="{{token}}" />
+											</form>
+									</a></li>
 								</ul>
 							</li>
 						</ul>
