log out in admin changed

--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
@@ -47,7 +47,7 @@
 	src="/Bootstrap-Admin-Theme/filtros/vendors/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
 
-
+<link href="/css/admin.css" rel="stylesheet" />
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -80,8 +80,7 @@
 									class="caret"></b></a>
 								<ul data-brackets-id='147'
 									class="dropdown-menu animated fadeInUp">
-									<li data-brackets-id='148'><a data-brackets-id='149'
-										href="/admin/Profile">Perfil</a></li>
+									<li><a href="/admin/Profile" id="boton_nuevo_cs" class="btn">Perfil</a></li>
 									<li><a>
 											<form action="/user/close" method="post">
 												<input type="submit" id="boton_nuevo_cs" class="btn"
