--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
@@ -48,7 +48,7 @@
 
 <link href="/Bootstrap-Admin-Theme/css/stats.css" rel="stylesheet">
 
-
+<link href="/css/admin.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -70,7 +70,7 @@
 							<li class="dropdown"><a href="#" class="dropdown-toggle"
 								data-toggle="dropdown">Mi cuenta <b class="caret"></b></a>
 								<ul class="dropdown-menu animated fadeInUp">
-									<li><a href="/admin/Profile">Perfil</a></li>
+									<li><a href="/admin/Profile" id="boton_nuevo_cs" class="btn">Perfil</a></li>
 									<li><a>
 											<form action="/user/close" method="post">
 												<input type="submit" id="boton_nuevo_cs" class="btn"
