--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -21,6 +21,8 @@
 
 <link href="/Bootstrap-Admin-Theme/css/calendar.css" rel="stylesheet">
 
+<link href="/css/admin.css" rel="stylesheet" />
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -47,7 +49,7 @@
 							<li class="dropdown"><a href="#" class="dropdown-toggle"
 								data-toggle="dropdown">Mi cuenta <b class="caret"></b></a>
 								<ul class="dropdown-menu animated fadeInUp">
-									<li><a href="/admin/Profile">Perfil</a></li>
+									<li><a href="/admin/Profile" id="boton_nuevo_cs" class="btn">Perfil</a></li>
 									<li><a>
 											<form action="/user/close" method="post">
 												<input type="submit" id="boton_nuevo_cs" class="btn"
